[gd_scene load_steps=8 format=3 uid="uid://bopqii5ghkhub"]

[ext_resource type="Script" path="res://scene/Menu/main_menu(fix).gd" id="1_mm4d3"]
[ext_resource type="Theme" uid="uid://e053da73co0y" path="res://assets/custom assets/theme.tres" id="2_rngs3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugn14"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_86sxq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cgqtl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5jff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hlixc"]

[node name="Main_menu" type="CanvasLayer"]
script = ExtResource("1_mm4d3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rngs3")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Game_title" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Start_button" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.662745, 0.34902, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.541176, 0.14902, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_ugn14")
theme_override_styles/hover = SubResource("StyleBoxEmpty_86sxq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cgqtl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_r5jff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hlixc")
action_mode = 0
keep_pressed_outside = true
text = "Start
"

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Settings_button" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.662745, 0.34902, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.541176, 0.14902, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_ugn14")
theme_override_styles/hover = SubResource("StyleBoxEmpty_86sxq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cgqtl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_r5jff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hlixc")
action_mode = 0
keep_pressed_outside = true
text = "Settings
"

[node name="MarginContainer3" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Exit_button" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.662745, 0.34902, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.541176, 0.14902, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_ugn14")
theme_override_styles/hover = SubResource("StyleBoxEmpty_86sxq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cgqtl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_r5jff")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hlixc")
action_mode = 0
keep_pressed_outside = true
text = "Exit
"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Start_button" to="." method="_on_start_button_pressed" flags=18]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Settings_button" to="." method="_on_settings_button_pressed" flags=18]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/Exit_button" to="." method="_on_exit_button_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Exit_button" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Exit_button" to="." method="_on_exit_button_pressed" flags=18]
